--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body, html {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  background-color: #02273c;
 }
 
 @media (orientation: landscape) {
